2001-11-26  Akim Demaille  <akim@epita.fr>

	* automake.in (&macro_define): Use $where when reporting an error,
	not the place where the macro was first defined since (i) if this
	is the first definition, then obviously it was not defined before,
	and (ii) anyway, the error is with the new definition, not the
	first.

2001-11-26  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* lib/am/distdir.am (distcheck): Call distcleancheck.
	(distcleancheck_listfiles, distcleancheck): New, extracted from
	distcheck.
	* automake.texi (Checking the distribution): Document
	distcleancheck_listfiles and distcleancheck.

2001-11-25  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* automake.in (scan_one_autoconf_file): Parenthesize qw// in
	foreach invocation, otherwise Perl5.005_03 complains about a
	syntax error.  Reported by Yann Droneaud.

2001-11-19  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* automake.in (scan_texinfo_file): Suppress FIXME about strange
	map behavior.

2001-11-19  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* tests/defs (aclocaldir): Check for existence of libtool.m4 and
	gettext.m4 if required.

2001-11-16  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* automake.in (define_objects_from_sources,
	handle_lib_objects_cond, value_to_list): Use quotemeta instead of
	the equivalant substitution.

2001-11-16  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* automake.in (SUFFIX_RULE_PATTERN): Add '_(){}$@' to the
	set of accepted characters in extensions.
	(rule_define): Convert '.o' and '.obj' into '$(OBJEXT)' for
	internall use.
	* tests/suffix6.test: Ensure that `.o' is handled like `.$(OBJEXT)'.

2001-11-16  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* automake.texi (Suffixes): Don't require SUFFIXES, but document
	its use for the "extreme" cases.

2001-11-16  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* automake.in (rule_define): Use $KNOWN_EXTENSIONS_PATTERN
	to match suffix rules for known extensions, or call
	accept_extensions on suffixe rules for unknown extensions.