@@ -54,7 +54,7 @@ TAGS: %DIRS% $(HEADERS) $(SOURCES) %CONFIG% $(TAGS_DEPENDENCIES) \
 ?SUBDIRS?	  fi; \
 ?SUBDIRS?	done; \
 ## Make sure the list of sources is unique.
-	list='$(SOURCES) $(HEADERS) $(TAGS_FILES)'; \
+	list='$(SOURCES) $(HEADERS) %CONFIG% $(LISP) $(TAGS_FILES)'; \
 	unique=`for i in $$list; do \
 ## Handle VPATH correctly.
 	    if test -f "$$i"; then echo $$i; else echo $(srcdir)/$$i; fi; \
@@ -62,8 +62,8 @@ TAGS: %DIRS% $(HEADERS) $(SOURCES) %CONFIG% $(TAGS_DEPENDENCIES) \
 	  $(AWK) '    { files[$$0] = 1; } \
 	       END { for (i in files) print i; }'`; \
 ## Make sure we have something to run etags on.
-	test -z "$(ETAGS_ARGS)%CONFIG%$$unique$(LISP)$$tags" \
-	  || etags $(ETAGS_ARGS) $$tags %CONFIG% $$unique $(LISP)
+	test -z "$(ETAGS_ARGS)$$tags$$unique" \
+	  || etags $(ETAGS_ARGS) $$tags $$unique
 
 
 ## --------------- ##
