@@ -1,3 +1,9 @@
+2001-11-26  Alexandre Duret-Lutz  <duret_g@epita.fr>
+
+	* lib/am/tags.am (TAGS): Search %CONFIG% and $(LISP) files
+	in $(srcdir), like other TAGS dependencies.
+	Suggested by Christian Cornelssen.
+
 2001-11-26  Akim Demaille  <akim@epita.fr>
 
 	* automake.in (&macro_define): Use $where when reporting an error,
